<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.fragments.MovieDetailsFragment">

    <data>
        <import type="com.example.warpspeedassessment.presentation.viewStates.Status" />
        <import type="android.view.View" />
        <variable
            name="movieViewModel"
            type="com.example.warpspeedassessment.presentation.viewModels.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:loadPosterW500="@{movieViewModel.movieDetails.content.posterPath}"
            android:contentDescription="@string/movie_thumbnail"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:visibility="@{movieViewModel.movieDetails.status == Status.LOADING ? View.VISIBLE : View.GONE}"
            tools:visibility="invisible"
            android:indeterminateDrawable="@drawable/progress_bar_bg_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_back"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:src="@drawable/arrow_back"
            android:rotationY="180"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:background="@drawable/view_back_ground"
            android:layout_height="@dimen/dimen_40dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins"
            android:text="@{String.format(@string/directed_by, movieViewModel.movieDetails.content.directorName)}"
            android:textColor="@color/off_white"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen_20dp"
                android:paddingBottom="@dimen/dimen_30dp"
                android:paddingHorizontal="@dimen/dimen_20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@{movieViewModel.movieDetails.content.title}"
                    android:textColor="@color/white"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="@dimen/dimen_18sp"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="John Wick Chapter 4" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:contentDescription="@string/movie_rating"
                    android:src="@drawable/star_rate"
                    app:layout_constraintEnd_toStartOf="@+id/movie_rating"
                    app:layout_constraintTop_toTopOf="@+id/movie_rating" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@{movieViewModel.movieDetails.content.voteAverageRating}"
                    android:textColor="@color/white_grey"
                    android:textSize="@dimen/dimen_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title"
                    tools:text="5.0" />

                <TextView
                    android:id="@+id/watch_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@drawable/text_chip_background"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@{movieViewModel.movieDetails.content.voteCount}"
                    android:textAlignment="gravity"
                    android:textColor="@color/off_white"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="4k" />

                <TextView
                    android:id="@+id/movie_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{movieViewModel.movieDetails.content.runTime}"
                    android:textColor="@color/off_white"
                    app:layout_constraintStart_toEndOf="@+id/watch_count"
                    app:layout_constraintTop_toTopOf="@+id/watch_count"
                    tools:text="2h 30m" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:background="@drawable/dot_back_ground"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_duration"
                    app:layout_constraintStart_toEndOf="@+id/movie_duration"
                    app:layout_constraintTop_toTopOf="@+id/movie_duration" />

                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{movieViewModel.movieDetails.content.genres.get(0).name}"
                    android:textColor="@color/off_white"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_duration"
                    app:layout_constraintStart_toEndOf="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/movie_duration"
                    tools:text="Action" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:background="@drawable/dot_back_ground"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_genre"
                    app:layout_constraintStart_toEndOf="@+id/movie_genre"
                    app:layout_constraintTop_toTopOf="@+id/movie_genre" />

                <TextView
                    android:id="@+id/movie_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{movieViewModel.movieDetails.content.releaseDate}"
                    android:textColor="@color/off_white"
                    app:layout_constraintStart_toEndOf="@+id/view3"
                    app:layout_constraintTop_toTopOf="@+id/movie_genre"
                    tools:text="19 Dec 2003" />

                <TextView
                    android:id="@+id/movie_story_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/story_line"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintStart_toStartOf="@+id/watch_count"
                    app:layout_constraintTop_toBottomOf="@+id/watch_count" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:justificationMode="inter_word"
                    android:text="@{movieViewModel.movieDetails.content.overview}"
                    android:textColor="@color/white_grey"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="@+id/movie_story_line"
                    app:layout_constraintTop_toBottomOf="@+id/movie_story_line"
                    tools:text="@string/place_holder_movie_plot" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/top_casts"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_casts_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/top_casts_rv_item_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_error_occurred_kindly_try_again"
            android:textSize="@dimen/dimen_16sp"
            android:visibility="@{(movieViewModel.movieDetails.status == Status.ERROR || movieViewModel.movieDetails.status == Status.SERVER_ERROR || movieViewModel.movieDetails.status == Status.TIMEOUT) ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>